ui/summit-2023/src/components/common/Footer/Footer.module.scss
.footer {
  background: transparent;
  box-shadow: none;
  min-height: 44px;
  padding-left: 24px;
  padding-right: 24px;
  bottom: 0 !important;
  text-align: left;
  font-size: 16px !important;
  font-weight: 400 !important;
  line-height: 18.75px !important;
  @media only screen and (max-width: 900px) {
    text-align: center;
    margin-top: 20px;
  }
}

.link {
  color: var(--color-medium-grey) !important;
  cursor: pointer !important;
  display: flex !important;
}

